syntax = "proto3";

package chatroom.msgpb;

message RemoveGroupAck {
    bool success = 1;
    string errmsg = 2;
}